--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -308,3 +308,23 @@ year = {2000}
  howpublished  = {https://www.w3.org/TR/owl-ref/},
   urldate = {2004-02-10}
 }
+@article{Levy2015,
+	author = {Levy, Omer  and Goldberg, Yoav  and Dagan, Ido },
+	title = {Improving Distributional Similarity with Lessons Learned from Word Embeddings},
+	journal = {Transactions of the Association for Computational Linguistics},
+	volume = {3},
+	year = {2015},
+	keywords = {},
+	abstract = {Recent trends suggest that neural-network-inspired word embedding models outperform traditional count-based distributional models on word similarity and analogy detection tasks. We reveal that much of the performance gains of word embeddings are due to certain system design choices and hyperparameter optimizations, rather than the embedding algorithms themselves. Furthermore, we show that these modifications can be transferred to traditional distributional models, yielding similar gains. In contrast to prior reports, we observe mostly local or insignificant performance differences between the methods, with no global advantage to any single approach over the others.},
+	issn = {2307-387X},
+	url = {https://transacl.org/ojs/index.php/tacl/article/view/570},
+	pages = {211--225}
+}
+@inproceedings{pennington2014,
+  author = {Jeffrey Pennington and Richard Socher and Christopher D. Manning},
+  booktitle = {Empirical Methods in Natural Language Processing (EMNLP)},
+  title = {GloVe: Global Vectors for Word Representation},
+  year = {2014},
+  pages = {1532--1543},
+  url = {http://www.aclweb.org/anthology/D14-1162},
+}
