--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -160,6 +160,13 @@ We present a generic architecture for ontology learning systems and discuss its 
  address = {New York, NY, USA},
  keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
 }
+% rule learning ontology
+@phdthesis{Galarraga2016,
+author = {Gal{\'{a}}rraga, Luis},
+school = {Telecom ParisTech},
+title = {{Rule Mining in Knowledge Bases}},
+year = {2016}
+}
 % neural network for ontology learning
 @article{Petrucci16,
   author    = {Giulio Petrucci and
@@ -174,6 +181,18 @@ We present a generic architecture for ontology learning systems and discuss its 
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/PetrucciGR16},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+% hierarchy learning via word embeddings
+@article{Fu2014,
+abstract = {Semantic hierarchy construction aims to build structures of concepts linked by hypernym–hyponym (“is-a”) relations. A major challenge for this task is the automatic discovery of such relations. This paper proposes a novel and effec- tive method for the construction of se- mantic hierarchies based on word em- beddings, which can be used to mea- sure the semantic relationship between words. We identify whether a candidate word pair has hypernym–hyponym rela- tion by using the word-embedding-based semantic projections between words and their hypernyms. Our result, an F-score of 73.74{\%}, outperforms the state-of-the- art methods on a manually labeled test dataset. Moreover, combining our method with a previous manually-built hierarchy extension method can further improve F- score to 80.29{\%}. 1},
+author = {Fu, Ruiji and Guo, Jiang and Qin, Bing and Che, Wanxiang and Wang, Haifeng and Liu, Ting},
+isbn = {9781937284725},
+journal = {Acl},
+pages = {1199--1209},
+pmid = {1626155},
+title = {{Learning Semantic Hierarchies via Word Embeddings}},
+year = {2014}
+}
+
 % similarity (semantic)
 @inproceedings{Lin1998,
  author = {Lin, Dekang},
