Started writing foundations/taxonomy.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -160,6 +160,15 @@ We present a generic architecture for ontology learning systems and discuss its 
  address = {New York, NY, USA},
  keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
 }
+% ontology learning and population from text
+@book{Cimiano2006,
+ author = {Cimiano, Philipp},
+ title = {Ontology Learning and Population from Text: Algorithms, Evaluation and Applications},
+ year = {2006},
+ isbn = {0387306323},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+} 
 % rule learning ontology
 @phdthesis{Galarraga2016,
 author = {Gal{\'{a}}rraga, Luis},
